--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.api">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,7 +12,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.API">
         <activity
-            android:name=".MainActivity"
+            android:name=".activity.Add"
+            android:exported="false" />
+        <activity
+            android:name=".activity.PostDetailsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.ListUsersActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
